--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "day": "./bin/day.js",
     "part": "./bin/part.js",
     "download-test-input": "./bin/download-test-input.js",
-    "test": "jest"
+    "test": "jest",
+    "watch": "jest --watch"
   },
   "repository": {
     "type": "git",
