--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/alvaro-cuesta/aoc-js#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "eslint": "^6.7.2",
     "jest": "^24.9.0",
     "ramda": "^0.26.1"
   }
