--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "eslint": "^6.7.2",
     "jest": "^24.9.0",
     "ramda": "^0.26.1"
+  },
+  "devDependencies": {
+    "eslint-plugin-jest": "^23.1.1"
   }
 }
