Fix: fill template values when starting a day

--- a/templates/XX.test.js.template
+++ b/templates/XX.test.js.template
@@ -7,9 +7,9 @@ describeDay(
   null,
   null,
 
-  ({}) => {},
+  (dayModule) => {},
 
-  (part1, {}) => {},
+  (part1, dayModule) => {},
 
-  (part2, {}) => {},
+  (part2, dayModule) => {},
 )
