chore: change keywords

--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   },
   "keywords": [
     "advent",
-    "code",
-    "2019"
+    "code"
   ],
   "author": "Alvaro Cuesta <alvaro-cuesta@GitHub>",
   "license": "ISC",
